--- a/Logic Apps/LatestCISAVulnerabilities/CISALogicApp.json
+++ b/Logic Apps/LatestCISAVulnerabilities/CISALogicApp.json
@@ -8,8 +8,8 @@
         }
     },
     "variables": {
-        "SecuritycopilotConnectionName": "Securitycopilot",
-        "Office365ConnectionName": "Office365"
+        "SecuritycopilotConnectionName": "[concat('Securitycopilot-', parameters('PlaybookName'))]"
+        "Office365ConnectionName": "[concat('Office365-', parameters('PlaybookName'))]"
     },
     "resources": [
         {
@@ -21,6 +21,42 @@
                 "Created By": "Jamil Mirza",
                 "CreatedDate": "8/8/2024 10:52:27 PM"
             },
+            "apiVersion":  "2017-07-01",
+            "dependsOn":  [
+                "[resourceId('Microsoft.Web/connections', variables('Office365ConnectionName'))]",
+                "[resourceId('Microsoft.Web/connections', variables('SecuritycopilotConnectionName'))]"
+            ]
+        },
+        {
+            "type":  "Microsoft.Web/connections",
+            "apiVersion":  "2016-06-01",
+            "name":  "[variables('Office365ConnectionName')]",
+            "location":  "[resourceGroup().location]",
+            "kind":  "V1",
+            "properties":  {
+                "displayName":  "[variables('Office365ConnectionName')]",
+                "customParameterValues":  {
+                },
+                "api":  {
+                    "id":  "[concat('/subscriptions/', subscription().subscriptionId, '/providers/Microsoft.Web/locations/', resourceGroup().location, '/managedApis/Office365')]"
+                }
+            }
+        },
+        {
+            "type":  "Microsoft.Web/connections",
+            "apiVersion":  "2016-06-01",
+            "name":  "[variables('SecuritycopilotConnectionName')]",
+            "location":  "[resourceGroup().location]",
+            "kind":  "V1",
+            "properties":  {
+                "displayName":  "[variables('SecuritycopilotConnectionName')]",
+                "customParameterValues":  {
+                },
+                "api":  {
+                    "id":  "[concat('/subscriptions/', subscription().subscriptionId, '/providers/Microsoft.Web/locations/', resourceGroup().location, '/managedApis/Securitycopilot')]"
+                }
+            }
+        },
             "properties": {
                 "state": "Enabled",
                 "definition": {
